--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^4.0.2",
+    "react-spinners": "^0.13.4",
     "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
