--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -18,7 +18,7 @@
     "react-google-login": "^5.2.2",
     "react-jwt": "^1.1.6",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-simple-typewriter": "^4.0.2",
     "react-spinners": "^0.13.4",
     "typewriter-effect": "^2.19.0",
